# enduroBuddy

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  Dockerfile  EB-notes.md  README.md  TD-notes.md  TD-notes.txt  dashboard.html  dev.sh  docker-compose.prod.yml  docker-compose.yml  readme.md  requirements.txt
backend/: inspect_fit.py  pyproject.toml  tmp_22163202434.fit
backend/accounts/: adapters.py  admin.py  context_processors.py  forms.py  models.py  tests.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_coachathlete_options.py  0003_garminconnection_garminsyncaudit.py  0004_traininggroup_traininggroupathlete.py  0005_traininggroupinvite.py  0006_alter_coachathlete_coach.py  0007_coachathlete_focus_and_sort_order.py  0008_alter_coachathlete_focus.py  0009_alter_coachathlete_focus.py  0010_profile_coach_join_code_coachjoinrequest.py  0011_coachathlete_hidden_from_plans.py  0012_profile_legend_state.py  0013_importjob.py  0014_importjob_progress_fields.py  0015_appnotification.py  0018_profile_terms_accepted_at.py  (+2 more)
backend/activities/: admin.py  apps.py  models.py  signals.py
backend/api/: tests.py  urls.py
backend/config/: celery.py  error_views.py  middleware.py  settings.py  urls.py  views_nuxt.py  views_public.py  views_spa.py
backend/dashboard/: api.py  tests.py  texts.py  urls.py  views.py  views_athlete_api.py  views_coach.py  views_home.py  views_invites.py  views_profile.py  views_shared.py
backend/templates/: 400.html  403.html  404.html  500.html  base.html  spa.html
backend/training/: admin.py  models.py
(+482 files in other folders)
