[project]
name = "endurobuddy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.9",
    "django-allauth[socialaccount]==65.14.3",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.0",
    "fitparse==1.2.0",
    "garminconnect==0.2.28",
    "gunicorn==23.0.0",
    "psycopg[binary]==3.3.2",
    "PyJWT==2.10.1",
    "requests==2.32.4",
    "whitenoise==6.9.0",
    "django-q2==1.10.0",
]

[dependency-groups]
dev = [
    "pytest-django==4.9.0",
    "factory-boy==3.3.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
